# video-manual

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Caddyfile  Dockerfile  PHASE1_TESTING.md  README.md  deploy.sh  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml
.claude/: settings.json
.claude-plugins/.claude-plugin/: marketplace.json
.claude-plugins/vdocs/: README.md
.claude-plugins/vdocs/.claude-plugin/: plugin.json
.claude-plugins/vdocs/agents/: deployment-verifier.md
.claude-plugins/vdocs/commands/: deploy.md  dev.md  docker.md  gh-pr.md  gh-runs.md  (+5 more)
.github/workflows/: ci.yml  deploy.yml  release.yml
ai_documents/: cli_commands.md
ai_documents/plans/: guide-agent-plan.md  nested-sections-refactor.md  new_export_options.md  supabase-auth-implementation.md
ai_documents/public/: getting-started.md  index.md
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  jest.config.js  next.config.ts  package-lock.json  package.json
frontend/messages/: en.json  es.json
scripts/: create_default_templates.py  create_report_templates.py  migrate_manual_to_doc_id.py  migrate_manuals_to_docs.py
src/: __init__.py  config.py
src/agents/: __init__.py
src/api/: __init__.py  dependencies.py  main.py  schemas.py  serve.py
src/cli/: __init__.py  console.py  main.py
src/core/: __init__.py  constants.py  events.py  models.py  runners.py  sanitization.py
src/db/: __init__.py  admin_settings.py  database.py  job_storage.py  usage_tracking.py  user_management.py  vdocs.db
src/export/: __init__.py  base_exporter.py  chunks_exporter.py  compilation_exporter.py  doc_exporter.py  html_exporter.py  manual_exporter.py  project_exporter.py  project_markdown_exporter.py  tag_parser.py  template_word_exporter.py  word_exporter.py
src/storage/: __init__.py  compilation_version_storage.py  project_storage.py  screenshot_store.py  template_storage.py  trash_storage.py  user_storage.py  version_storage.py
src/tui/: __init__.py  __main__.py  app.py  styles.tcss
templates/: default-manual.docx  incident-report.docx  incident-report.json  inspection-report.docx  inspection-report.json  progress-report.docx  progress-report.json  quick-guide.docx  quick-guide.json  reference.docx  reference.json  step-manual.docx  step-manual.json  summary.docx  summary.json
tests/: README.md  __init__.py  conftest.py  factories.py
tests/agents/: test_guide_tools.py
tests/api/: conftest.py  test_admin.py  test_auth.py  test_docs.py  test_jobs.py  test_projects.py  test_templates.py  test_trash.py  test_videos.py
tests/core/: test_constants.py  test_models.py  test_sanitization.py
tests/export/: __init__.py  test_doc_exporter.py  test_html_exporter.py  test_word_exporter.py
tests/storage/: __init__.py  test_project_storage.py  test_template_storage.py  test_trash_storage.py  test_user_storage.py  test_version_storage.py
(+301 files in other folders)
