[project]
name = "vdocs"
version = "0.2.1-alpha.1"
description = "vDocs - AI-powered documentation from video"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # LangChain & LangGraph
    "langchain>=1.0.3",
    "langchain-google-genai>=2.1.0",
    "google-genai>=1.0.0", # For Gemini Files API (newer SDK)
    "langgraph>=0.5.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "langsmith>=0.3.0", # LangSmith tracing
    # Environment
    "python-dotenv>=1.0.0",
    # DeepAgents - for compiler agent
    "deepagents>=0.2.8",
    # Video Processing & Analysis
    "opencv-python>=4.10.0",
    "moviepy>=2.1.0",
    "scenedetect[opencv]>=0.6.4",
    # Image Processing
    "pillow>=11.0.0",
    # Video operations support
    "ffmpeg-python>=0.2.0",
    "numpy>=2.0.0",
    # CLI
    "rich>=13.0.0",
    "typer>=0.9.0",
    # Export (PDF, Word, HTML)
    "weasyprint>=66.0",
    "markdown>=3.5.0",
    "pygments>=2.17.0",
    "python-docx>=1.2.0",
    "docxtpl>=0.18.0", # Word template engine (Jinja2)
    # Web API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.10.0",
    # Authentication
    "PyJWT>=2.8.0",
    # Assistant UI streaming
    "assistant-stream[langgraph]>=0.0.31",
    "aiosqlite>=0.21.0",
    "docxcompose>=1.4.0",
]

[project.scripts]
vdocs = "src.cli.main:app"
vdocs-api = "src.api.serve:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.14.0",
    "factory-boy>=3.3.0",
    "respx>=0.21.0",
    "freezegun>=1.4.0",
]
